k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: sniply-ingress
  namespace: sniply-staging
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx

  rules:
    - host: sniply.kodothgroup.com
      http:
        paths:
          - path: /server(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sniply-server
                port:
                  number: 80

          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sniply-auth
                port:
                  number: 80
            
          - path: /website(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sniply-website
                port:
                  number: 80
              
          - path: /app(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sniply-app
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: sniply-website-root-ingress
  namespace: sniply-staging

spec:
  ingressClassName: nginx

  rules:
    - host: sniply.kodothgroup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sniply-website
                port:
                  number: 80
